--- a/app/views/site/brands.html.erb
+++ b/app/views/site/brands.html.erb
@@ -1,6 +1,6 @@
 <div class="row brands_top_margin">
 	<div class="col-md-12">
-		<h3 align="center">Browse through products by clicking on a brand. Remember to copy and paste the url of the product you like into our Request a Trial form.</h3>
+		<h3 align="center">Navegue por los productos haciendo clic en su marca favorita. Recuerde copiar y pegar el enlace de la url de los productos que desea probar en el Formulario de solicitud.</h3>
 	</div>
 </div>
 
