--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -7,9 +7,9 @@
 <div class="row">
   <%= image_tag("1_2.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
   <div class="col col-md-4">
-    <h1 align="center">Try & Buy</h1>
-    <h5 align="center">Sign-up now and get &euro;10 off on your first purchase</h5>
-    <p align="center"> This limited time offer is bound to give you the best shopping experience ever. Try fashion products and then buy them from the convenience of your homes.</p>
+    <h2 align="center">Prueba y Compra</h2>
+    <h5 align="center">Regístrese hoy para la oferta por tiempo limitado de &euro;10 de descuento en su primera compra!</h5>
+    <p align="center"> Pruebe productos de moda en ANTES de decidir si quiere comprarlos - todo desde la comodidad de su propia casa! ¿La mejor parte? Es GRATIS!</p>
   </div>        
   <%= image_tag("1_6.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
 </div>
@@ -17,37 +17,37 @@
 <div class="row">
   <%= image_tag("1_9.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>        
   <div class="col col-md-2 mt-4">
-    <%= link_to "Sign-up", new_user_path, class: "btn btn-block btn-drop btn-lg effect-btn" %>
+    <%= link_to "Registrarse", new_user_path, class: "btn btn-block btn-drop btn-lg effect-btn" %>
   </div>
   <div class="col col-md-2 mt-4">
-    <%= link_to "Shop Brands", brands_path, class: "btn btn-block btn-trial btn-lg effect-btn" %>
+    <%= link_to "Marcas", brands_path, class: "btn btn-block btn-trial btn-lg effect-btn" %>
   </div>
   <%= image_tag("1_7.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
 </div>
 
 <div class="row mt-5 p-3">
   <div class="col col-md-12">
-    <h2 class="the_underline" align="center">How It Works</h2>
+    <h2 class="the_underline" align="center">Cómo Funciona</h2>
   </div>
 </div>
 
 <div class="row mt-3 mb-5">
   <div class="col-md-4">
     <h1 class="the_underline" align="center">01</h1>
-    <h3 align="center">Discover Products</h3>
-    <p align="center">Look through products across the listed brands by clicking on the Shop Brands link at the top of the page.</p>
+    <h3 align="center">Descubra los productos</h3>
+    <p align="center">Busca productos entre las marcas que aparecen en la lista haciendo clic en el enlace Comprar Marcas en la parte superior de la página</p>
   </div>
 
   <div class="col-md-4">
     <h1 class="the_underline" align="center">02</h1>
-    <h3 align="center">Select Products</h3>
-    <p align="center">Discover products that you like and copy the url link of the product from your browser's url bar.</p>
+    <h3 align="center">Seleccione Productos</h3>
+    <p align="center">Descubra los productos que le gustan y copie el enlace de la url del producto desde la barra de direcciones de su navegador.</p>
   </div>
 
   <div class="col-md-4">
     <h1 class="the_underline" align="center">03</h1>
-    <h3 align="center">Request a Trial</h3>
-    <p align="center">Click on the Request a Trial button, fill in your details and the product links that you want a trial for.</p>
+    <h3 align="center">Solicitar una prueba</h3>
+    <p align="center">Haga clic en el botón Solicitar una prueba, rellene sus datos y los enlaces de los productos para los que desea una prueba.</p>
   </div>
 
 </div>
@@ -56,9 +56,9 @@
    <div class="col col-md-6 offset-md-3">
      <div class="outerbox_signup p-5 effect1">
        <div class="innerbox_signup">
-         <h2 align="center">What Are You Waiting For?</h2>
-         <p align="center"> By signing up you will receive the latest updates on what products and brands you can try out before you buy. </p>
-         <%= link_to "Sign Up", new_user_path, class: "btn btn-block btn-lg btn-drop" %>
+         <h2 align="center">¿Qué estás esperando?</h2>
+         <p align="center"> La nueva era de las compras online ya está aquí! Al registrarse recibirá las últimas actualizaciones sobre los productos y marcas que puede PRUEBA antes de COMPRAR. </p>
+         <%= link_to "Registrarse", new_user_path, class: "btn btn-block btn-lg btn-drop" %>
        </div>
      </div>
    </div> 
