--- a/app/views/site/thanks.html.erb
+++ b/app/views/site/thanks.html.erb
@@ -4,13 +4,13 @@
 
 <div class="row margin_for_sign_up">
   <div class="col col-md-6 offset-md-3">
-    <h1 align="center">Thank You</h1>
-    <h3 align="center">Don't forget to ask for your &euro;10 discount on your first product purchase. Also, trials are free.</h3>
+    <h1 align="center">Gracias por Registrarse</h1>
+    <h3 align="center">Recuerde utilizar su código de descuento SDA10 para recibir &euro;10 de descuento en el precio de su primer intento de compra!</h3>
   </div>
 </div>
 
 <div class="row mt-5">
   <div class="col col-md-6 offset-md-3">
-    <%= link_to "Start Shopping", brands_path, class: "btn btn-lg btn-drop btn-block" %>
+    <%= link_to "Empezar A Comprar", brands_path, class: "btn btn-lg btn-drop btn-block" %>
   </div>
 </div>
