--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,34 +9,34 @@
     <%= form_for(@user, :html => {class: "form", role: "form"}) do |f| %>
       <div class="form-group">
         <label for="first_name"> 
-          <%= f.label :first_name, "First Name*" %>  
+          <%= f.label :first_name, "Nombre*" %>  
         </label>
         <div class="col col-md-12">
-          <%= f.text_field :first_name, class: "form-control", placeholder: "First Name", autofocus: true %>
+          <%= f.text_field :first_name, class: "form-control", placeholder: "John", autofocus: true %>
         </div>
       </div>
 
       <div class="form-group">
         <label> 
-          <%= f.label :last_name, "Last Name*" %> 
+          <%= f.label :last_name, "Apellido*" %> 
         </label>
         <div class="col col-md-12">
-          <%= f.text_field :last_name, class: "form-control", placeholder: "Last Name", autofocus: true %>
+          <%= f.text_field :last_name, class: "form-control", placeholder: "Doe", autofocus: true %>
         </div>
       </div>
 
       <div class="form-group">
         <label for="last_name"> 
-          <%= f.label :email, "Email Address*" %>  
+          <%= f.label :email, "Correo Electrónico*" %>  
         </label>
         <div class="col col-md-12">
-          <%= f.email_field :email, class: "form-control", placeholder: "Email Address", autofocus: true %>
+          <%= f.email_field :email, class: "form-control", placeholder: "john@gmail.com", autofocus: true %>
         </div>
       </div>
 
       <div class="form-group">
         <div class="col col-md-12">
-          <%= f.submit "Sign Me Up", class: "btn btn-drop btn-block btn-lg effect-btn" %>
+          <%= f.submit "Registrarse", class: "btn btn-drop btn-block btn-lg effect-btn" %>
         </div>
       </div>      
     <% end %>    
@@ -45,6 +45,6 @@
 
 <div class="row">
   <div class="col-md-12">
-    <p align="center">By signing up, you will receive DropAlley updates on your e-mail.</p>
+    <p align="center">Regístrese para obtener más información sobre descuentos, ofertas y nuevas marcas para explorar!</p>
   </div>
 </div>
