Change jpeg assets to jpg

--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -1,28 +1,28 @@
 <div class="row home_top_margin">
-  <%= image_tag("1_1.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>  
-  <%= image_tag("1_3.jpeg", :class => "col col-md-4 column_width_manager") %>
-  <%= image_tag("2_1.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
+  <%= image_tag("1_1.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>  
+  <%= image_tag("1_3.jpg", :class => "col col-md-4 column_width_manager") %>
+  <%= image_tag("2_1.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
 </div>
 
 <div class="row">
-  <%= image_tag("1_2.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
+  <%= image_tag("1_2.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
   <div class="col col-md-4">
     <h2 align="center">Prueba y Compra</h2>
     <h5 align="center">Regístrese hoy para la oferta por tiempo limitado de &euro;10 de descuento en su primera compra!</h5>
     <p align="center"> Pruebe productos de moda en ANTES de decidir si quiere comprarlos - todo desde la comodidad de su propia casa! ¿La mejor parte? Es GRATIS!</p>
   </div>        
-  <%= image_tag("1_6.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
+  <%= image_tag("1_6.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
 </div>
 
 <div class="row">
-  <%= image_tag("1_9.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>        
+  <%= image_tag("1_9.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>        
   <div class="col col-md-2 mt-4">
     <%= link_to "Registrarse", new_user_path, class: "btn btn-block btn-drop btn-lg effect-btn" %>
   </div>
   <div class="col col-md-2 mt-4">
     <%= link_to "Marcas", brands_path, class: "btn btn-block btn-trial btn-lg effect-btn" %>
   </div>
-  <%= image_tag("1_7.jpeg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
+  <%= image_tag("1_7.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
 </div>
 
 <div class="row mt-5 p-3">
