Update brands page

--- a/app/views/site/brands.html.erb
+++ b/app/views/site/brands.html.erb
@@ -6,16 +6,16 @@
 
 <div class="row">
 	<div class="col-md-3">
-		 <%= image_tag('logo_zara.png', class:" d-block mx-auto" ) %>
+		 <%=link_to image_tag('logo_zara.png', class:" d-block mx-auto" ), "https://www.zara.com/es/en", target:"_blank" %>
 	</div>
 	<div class="col-md-3">
-		<%= image_tag('logo_hm.png', class:" d-block mx-auto") %>
+		<%=link_to image_tag('logo_hm.png', class:" d-block mx-auto"), "http://www2.hm.com/es_es/index.html", target:"_blank" %>
 	</div>
 	<div class="col-md-3">
-		  <%= image_tag('logo_mango.png', class:" d-block mx-auto") %>
+		  <%=link_to image_tag('logo_mango.png', class:" d-block mx-auto"), "https://shop.mango.com/es", target: "_blank" %>
 	</div>
 	<div class="col-md-3">
-		  <%= image_tag('logo_cfant.png', class:" d-block mx-auto") %>
+		  <%=link_to image_tag('logo_cfant.png', class:" d-block mx-auto"), "https://www.xn--compaiafantastica-jxb.com/en/", target: "_blank" %>
 	</div>
 </div>
 
