Update Brands page

--- a/app/views/site/brands.html.erb
+++ b/app/views/site/brands.html.erb
@@ -19,3 +19,18 @@
 	</div>
 </div>
 
+<div class="row">
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_elganso.png', class:" d-block mx-auto"), "https://www.elganso.com/en/", target: "_blank" %>
+	</div>
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_muroexe.png', class:" d-block mx-auto"), "https://es.muroexe.com/", target: "_blank" %>
+	</div>
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_desig.png', class:" d-block mx-auto"), "https://www.desigual.com/es_ES", target: "_blank" %>
+	</div>
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_gbbravo.png', class:" d-block mx-auto"), "http://gbbravo.dropalley.com", target: "_blank" %>
+	</div>
+</div>
+
