Update Brands page

--- a/app/views/site/brands.html.erb
+++ b/app/views/site/brands.html.erb
@@ -34,3 +34,18 @@
 	</div>
 </div>
 
+<div class="row">
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_hawkers.png', class:" d-block mx-auto"),"https://www.hawkersco.com/", target: "_blank" %>
+	</div>
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_pullbear.png', class:" d-block mx-auto"), "https://www.pullandbear.com/es/en/", target: "_blank" %>
+	</div>
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_mdutti.png', class:" d-block mx-auto"), "https://www.massimodutti.com/es/en/", target: "_blank" %>
+	</div>
+	<div class="col-md-3">
+		  <%=link_to image_tag('logo_uter.png', class:" d-block mx-auto"), "https://www.uterque.com/es/en/", target: "_blank" %>
+	</div>
+</div>
+
