--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -32,6 +32,9 @@
 </div>
 
 <div class="row mt-3 mb-5">
+  <div class="col-md-12 d-block mx-auto">
+    <iframe width="100%" height="315" src="https://www.youtube.com/embed/8TfqL3aCGeo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+  </div>
   <div class="col-md-4">
     <h1 class="the_underline" align="center">01</h1>
     <h3 align="center">Descubra los productos</h3>
