Update cover images, Update content on thanks and orderconfirm page

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -143,7 +143,7 @@ body {
 }
 
 .cta_btn{
-	font-size: 2em;
+	font-size: 1.5em;
 }
 
 .container .jumbotron {
@@ -160,4 +160,8 @@ ul {
 
 .bottom_margin{
 	margin-bottom: 14%;
+}
+
+.jumbobg{
+	background-color: #f3f1f1;
 }
