--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -8,9 +8,9 @@
   <%= image_tag("1_2.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
   <div class="col col-md-4">
     <h2 align="center">DropAlley</h2>
-    <p align="center">We combine online and offline retail to give you the most convenient shopping experience out there!</p>
+    <h6 align="center">We combine online and offline retail to give you the most convenient shopping experience.</h6>
     <h4 align="center">Try & Buy</h4>
-    <h5 align="center"> Products brought to you whenever  and wherever you want so you can TRY before BUY</h5>
+    <h6 align="center"> Products brought to you whenever  and wherever you want so you can TRY before you BUY.</h6>
   </div>        
   <%= image_tag("1_6.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
 </div>
@@ -57,11 +57,11 @@
 </div>
 
 <div class="row mt-5 mb-5">
-   <div class="col col-md-6 offset-md-3">
+   <div class="col col-md-8 offset-md-2">
      <div class="outerbox_signup p-5 effect1">
        <div class="innerbox_signup">
          <h2 align="center">What Are You Waiting For?</h2>
-         <p align="center"> By signing up you will receive the latest updates on what products and brands you can try out before you buy.</p>
+         <h4 align="center"> By signing up you will receive the latest updates on what products and brands you can try out before you buy.</h4>
          <%= link_to "Sign-up", new_user_path, class: "btn btn-block btn-lg btn-drop" %>
        </div>
      </div>
