--- a/app/views/site/orderconfirm.html.erb
+++ b/app/views/site/orderconfirm.html.erb
@@ -4,8 +4,8 @@
 
 <div class="row margin_for_sign_up">
   <div class="col col-md-6 offset-md-3">
-    <h1 align="center">Order Received</h1>
-    <h3 align="center">We will send you an e-mail to figure out when it would be good time for us to get the product to you for a trial.</h3>
+    <h1 align="center">Thank You</h1>
+    <h3 align="center">You will receive an e-mail shortly to schedule your product trial.</h3>
   </div>
 </div>
 
