--- a/app/views/site/thanks.html.erb
+++ b/app/views/site/thanks.html.erb
@@ -1,11 +1,11 @@
 <div class="row mt-5">
-  <%= image_tag("signupheader.png", :class => "col col-md-8 offset-md-2 col-sm-12 col-xs-12 mt-3 d-none d-sm-block col-sm-12") %>
+  <%= image_tag("signupheader1.png", :class => "col col-md-8 offset-md-2 col-sm-12 col-xs-12 mt-3 d-none d-sm-block col-sm-12") %>
 </div>
 
 <div class="row margin_for_sign_up">
   <div class="col col-md-6 offset-md-3">
-    <h1 align="center">Thank You</h1>
-    <h3 align="center">Don't forget to ask for your &euro;10 discount on your first product purchase. Also, trials are free.</h3>
+    <h1 align="center">Welcome to the in-crowd!</h1>
+    <h3 align="center">We look forward to assisting you with all your fashion needs</h3>
   </div>
 </div>
 
