--- a/app/views/site/brands.html.erb
+++ b/app/views/site/brands.html.erb
@@ -1,6 +1,6 @@
 <div class="row brands_top_margin">
-	<div class="jumbotron effect1">
-	  <h1 class="display-4" align="center">Browse Brands</h1>
+	<div class="jumbotron effect1 jumbobg">
+	  <h1 align="center">Browse Brands</h1>
 	  <p class="lead" align="center">First, browse your favorite brands' website. Then, copy the products you like and request a trial by clicking on the button below.</p>
 	  <hr class="my-4">
 	  <div class="row">
