Update for production deployment

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -12,7 +12,7 @@
         <%= link_to "Shop Brands", brands_path, class: "nav-link links" %>
       </li>
     </ul>
-    <%= link_to "How It Works", brands_path, class: "nav-link links" %>
+    <%= link_to "How It Works", "https://www.youtube.com/watch?v=HL-NPWwXtx8", class: "nav-link links", target: "_blank" %>
     <%= link_to "Request A Trial", new_order_path, class: "btn btn-trial effect-btn my-2 my-sm-0" %>
   </div>
 
