--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -35,32 +35,32 @@
 <%= form_for(@order, :html => {class: "form", role: "form"}) do |f| %>
   <div class="form-row mt-2">
     <div class="form-group col-md-6">
-      <%= f.text_field :name, class: "form-control", placeholder: "Full Name", autofocus: true %>
+      <%= f.text_field :name, class: "form-control", placeholder: "Full Name" %>
     </div>
     <div class="form-group col-md-6">
-      <%= f.email_field :email, class: "form-control", placeholder: "Email", autofocus: true %>
+      <%= f.email_field :email, class: "form-control", placeholder: "Email" %>
     </div>
   </div>
 
   <div class="form-row">    
     <div class="form-group col-md-6">
-      <%= f.text_field :street_name, class: "form-control", placeholder: "Street", autofocus: true %>
+      <%= f.text_field :street_name, class: "form-control", placeholder: "Street" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :apartment, class: "form-control", placeholder: "Apartment", autofocus: true %>
+      <%= f.text_field :apartment, class: "form-control", placeholder: "Apartment" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :city, class: "form-control", placeholder: "City", autofocus: true %>
+      <%= f.text_field :city, class: "form-control", placeholder: "City" %>
     </div>
   </div>
 
   <div class="form-row">
     
     <div class="form-group col-md-3">
-      <%= f.text_field :zipcode, class: "form-control", placeholder: "Zipcode", autofocus: true %>
+      <%= f.text_field :zipcode, class: "form-control", placeholder: "Zipcode" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :phone_number, class: "form-control", placeholder: "Mobile Number", autofocus: true %>
+      <%= f.text_field :phone_number, class: "form-control", placeholder: "Mobile Number" %>
     </div>
   </div>
 
@@ -72,52 +72,52 @@
 
   <div class="form-row mt-2">
     <div class="form-group col-md-9">
-      <%= f.text_field :product1, class: "form-control", placeholder: "Product Link", autofocus: true %>
+      <%= f.text_field :product1, class: "form-control", placeholder: "Product Link" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :size1, class: "form-control", placeholder: "Size", autofocus: true %>
+      <%= f.text_field :size1, class: "form-control", placeholder: "Size" %>
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-9">
-      <%= f.text_field :product2, class: "form-control", placeholder: "Product Link", autofocus: true %>
+      <%= f.text_field :product2, class: "form-control", placeholder: "Product Link" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :size2, class: "form-control", placeholder: "Size", autofocus: true %>
+      <%= f.text_field :size2, class: "form-control", placeholder: "Size" %>
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-9">
-      <%= f.text_field :product3, class: "form-control", placeholder: "Product Link", autofocus: true %>
+      <%= f.text_field :product3, class: "form-control", placeholder: "Product Link" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :size3, class: "form-control", placeholder: "Size", autofocus: true %>
+      <%= f.text_field :size3, class: "form-control", placeholder: "Size" %>
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-9">
-      <%= f.text_field :product4, class: "form-control", placeholder: "Product Link", autofocus: true %>
+      <%= f.text_field :product4, class: "form-control", placeholder: "Product Link" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :size4, class: "form-control", placeholder: "Size", autofocus: true %>
+      <%= f.text_field :size4, class: "form-control", placeholder: "Size" %>
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-9">
-      <%= f.text_field :product5, class: "form-control", placeholder: "Product Link", autofocus: true %>
+      <%= f.text_field :product5, class: "form-control", placeholder: "Product Link" %>
     </div>
     <div class="form-group col-md-3">
-      <%= f.text_field :size5, class: "form-control", placeholder: "Size", autofocus: true %>
+      <%= f.text_field :size5, class: "form-control", placeholder: "Size" %>
     </div>
   </div>
 
   <div class="form-row">
     <div class="form-group col-md-12">
-      <%= f.text_area :comment, class: "form-control", placeholder: "Special Requests", autofocus: true %>
+      <%= f.text_area :comment, class: "form-control", placeholder: "Special Requests" %>
     </div>
   </div>
 
