--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -34,21 +34,21 @@
 
 <div class="row mt-3 mb-5">
   <div class="col-md-12 d-block mx-auto">
-    <iframe width="100%" height="315" src="https://www.youtube.com/embed/8TfqL3aCGeo" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    <iframe width="100%" height="400" src="https://www.youtube.com/embed/HL-NPWwXtx8?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
   </div>
-  <div class="col-md-4">
+  <div class="col-md-4 mt-4">
     <h1 class="the_underline" align="center">01</h1>
     <h3 align="center">Discover Products</h3>
     <h4 align="center">Find your favorite brands for Try & Buy</h4>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-4 mt-4">
     <h1 class="the_underline" align="center">02</h1>
     <h3 align="center">Select Products</h3>
     <h4 align="center">Select the products you want to try</h4>
   </div>
 
-  <div class="col-md-4">
+  <div class="col-md-4 mt-4">
     <h1 class="the_underline" align="center">03</h1>
     <h3 align="center">Request A Trial</h3>
     <h4 align="center">Fill in your details and paste product links</h4>
@@ -61,7 +61,7 @@
      <div class="outerbox_signup p-5 effect1">
        <div class="innerbox_signup">
          <h2 align="center">What Are You Waiting For?</h2>
-         <h4 align="center"> By signing up you will receive the latest updates on what products and brands you can try out before you buy.</h4>
+         <h4 class="mb-5" align="center"> By signing up you will receive the latest updates on what products and brands you can try out before you buy.</h4>
          <%= link_to "Sign-up", new_user_path, class: "btn btn-block btn-lg btn-drop" %>
        </div>
      </div>
