--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -125,4 +125,13 @@
 
 <% end %>
 
+<div class="row mb-3">
+  <div class="col-md-7">
+    <p><strong>Try & Buy is currently a free service. No purchase required. Simply buy products directly from our delivery partner once you try them and like them.</strong></p>
+  </div>
+  <div class="col-md-3 offset-md-2 mt-4">
+    <p>Still need help? <%= mail_to "contact@dropalley.com", "Contact Us" %></p>
+  </div>
+</div>
+
 <%= render 'layouts/footer' %>
