--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -101,6 +101,13 @@ body {
   height: 50px;
 }
 
+.fa-envelope {
+  background: #ff6600;
+  color: white;
+  width: 50px;
+  height: 50px;
+}
+
 .btn-drop {
 	background-color: #f04738;
 	color: #fff;
