--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,7 +13,7 @@
       </li>
     </ul>
     <%= link_to "How It Works", "https://www.youtube.com/watch?v=HL-NPWwXtx8", class: "nav-link links", target: "_blank" %>
-    <%= link_to "Request A Trial", new_order_path, class: "btn btn-trial effect-btn my-2 my-sm-0" %>
+    <%= link_to "Request A Try & Buy", new_order_path, class: "btn btn-trial effect-btn my-2 my-sm-0" %>
   </div>
 
   </div>
