--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -8,29 +8,29 @@
 
     <%= form_for(@user, :html => {class: "form", role: "form"}) do |f| %>
       <div class="form-group">
-        <label for="first_name"> 
-          <%= f.label :first_name, "First Name*" %>  
+        <label for="name"> 
+          <%= f.label :name, "Full Name*" %>  
         </label>
         <div class="col col-md-12">
-          <%= f.text_field :first_name, class: "form-control", placeholder: "John", autofocus: true %>
+          <%= f.text_field :name, class: "form-control", placeholder: "John", autofocus: true %>
         </div>
       </div>
 
       <div class="form-group">
-        <label> 
-          <%= f.label :last_name, "Last Name*" %> 
-        </label>
-        <div class="col col-md-12">
-          <%= f.text_field :last_name, class: "form-control", placeholder: "Doe", autofocus: true %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <label for="last_name"> 
+        <label for="email"> 
           <%= f.label :email, "Email Address*" %>  
         </label>
         <div class="col col-md-12">
           <%= f.email_field :email, class: "form-control", placeholder: "john@gmail.com", autofocus: true %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="password"> 
+          <%= f.label :password, "Password*" %>  
+        </label>
+        <div class="col col-md-12">
+          <%= f.password_field :password, class: "form-control", placeholder: "***********", autofocus: true %>
         </div>
       </div>
 
@@ -40,7 +40,9 @@
         </div>
       </div>      
     <% end %>    
+  
   </div>  
+
 </div>
 
 <div class="row">
