Add helper methods, Update Navbar with helper methods

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,21 +1,34 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light navbar-bottom-shadow">
+  
   <div class="container-fluid">
+  
   <%= link_to image_tag("logo.png", class:"navlogo"), root_path, class: "navbar-brand" %>
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "Shop Brands", brands_path, class: "nav-link links" %>
-      </li>
-    </ul>
-    <%= link_to "How It Works", "https://www.youtube.com/watch?v=HL-NPWwXtx8", class: "nav-link links", target: "_blank" %>
-    <%= link_to "Request A Try & Buy", new_order_path, class: "btn btn-trial effect-btn my-2 my-sm-0" %> 
-    <%= link_to "Logout", logout_path, method: :delete, class: "nav-link links" %>
-  </div>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  
+      <ul class="navbar-nav mr-auto">
+    
+        <li class="nav-item">
+          <%= link_to "Shop Brands", brands_path, class: "nav-link links" %>
+        </li>
+    
+      </ul>
+      
+      <%= link_to "How It Works", "https://www.youtube.com/watch?v=HL-NPWwXtx8", class: "nav-link links", target: "_blank" %>
+      
+      <%= link_to "Request A Try & Buy", new_order_path, class: "btn btn-trial effect-btn my-2 my-sm-0" %>
+      
+      <% if logged_in? %> 
+        <%= link_to "Logout", logout_path, method: :delete, class: "nav-link links" %>
+      <% else %>
+        <%= link_to "Login", login_path, class: "nav-link links" %>
+      <% end %>
+    </div>
 
   </div>
+
 </nav>
