--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,2 @@
-<h1 style="margin-top: 10%;">Welcome To Your Profile</h1>
+<h1 align="center", style="margin-top: 10%;">Hello <%= @user.name %> ,welcome to your profile</h1>
 
