--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,12 +1,20 @@
 <h1 style="margin-top: 25%;">List of all Try & Buys</h1>
 
+<% if logged_in? %>
+
 <div>
 	<% @orders.each do |order| %>
+		<% if current_user == order.user %>	
 			<div class="row">
 				<div class="col-md-6 mt-5">
 						Order for:<%= order.name %>, Order User: <%= order.user.name %>, Order Placed: <%= order.created_at.to_date %>
 				</div>
 			</div>
+		<% end %>
 	<% end %>	
 </div>
+
+<% end %>
+
+
 
