Adjust all pages for logged_in? helper

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -166,9 +166,13 @@ ul {
 }
 
 .bottom_margin{
-	margin-bottom: 14%;
+	margin-bottom: 12%;
 }
 
 .jumbobg{
 	background-color: #f3f1f1;
+}
+
+.btn-login{
+	width: 150px; 
 }
