--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,31 +10,26 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
   
-      <ul class="navbar-nav mr-auto">
-    
-        <li class="nav-item">
-          <%= link_to "Shop Brands", brands_path, class: "nav-link links" %>
-        </li>
-    
-      </ul>
+      <%= link_to "Shop Brands", brands_path, class: "navbar-nav mr-auto nav-link links" %>  
       
       <% if logged_in? %> 
         
+        <%= link_to "My Dashboard", user_path(current_user), class: "nav-link links" %>
         <%= link_to "My Orders", orders_path, class: "nav-link links" %>
              
       <% end %>
 
       <%= link_to "How It Works", "https://www.youtube.com/watch?v=HL-NPWwXtx8", class: "nav-link links", target: "_blank" %>
       
-      <%= link_to "Request A Try & Buy", new_order_path, class: "btn btn-trial effect-btn my-2 my-sm-0" %>
-      
       <% if logged_in? %> 
+
+        <%= link_to "Request A Try & Buy", new_order_path, class: "btn btn-trial effect-btn my-2 my-sm-0" %>
         
         <%= link_to "Logout", logout_path, method: :delete, class: "nav-link links" %>
         
       <% else %>
         
-        <%= link_to "Login", login_path, class: "nav-link links" %>
+        <%= link_to "Login", login_path, class: "btn btn-trial btn-login effect-btn my-2 my-sm-0" %>
       
       <% end %>
     </div>
