--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -45,7 +45,7 @@
 
 </div>
 
-<div class="row">
+<div class="row mb-4">
   <div class="col-md-12">
     <p align="center">By signing up, you will receive DropAlley updates to your e-mail.</p>
   </div>
