Update Dashboard page, add order_status_message and status_icon to order table

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -176,3 +176,21 @@ ul {
 .btn-login{
 	width: 150px; 
 }
+
+.outerbox_orderlist{
+	background-color: #f3f1f1;
+}
+
+.outerbox_drop1{
+	background-color: #f04738;
+	color: #fff;
+}
+
+.outerbox_drop2{
+	background-color: #001878;
+	color: #fff;
+}
+
+.status_icon {
+	font-size: 2em;
+}
