--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 <div class="row brands_top_margin">
 	<div align="center" class="col-md-4 offset-md-4">
-		<%= image_tag @user.image.url, class: "profile_img" %>
+		<% if @user.image? %>
+			<%= image_tag @user.image.url, class: "profile_img" %>
+		<% else %>
+			<%= image_tag ("default.png"), class: "profile_img" %>
+		<% end %>
 	</div>
 </div>
 
