--- a/app/views/site/home.html.erb
+++ b/app/views/site/home.html.erb
@@ -4,6 +4,8 @@
   <%= image_tag("2_1.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
 </div>
 
+Hello
+
 <div class="row">
   <%= image_tag("1_2.jpg", :class => "col col-md-4 column_width_manager d-none d-sm-block col-sm-4") %>
   <div class="col col-md-4">
